# revelation-app

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  Trunk.toml  index.html  package-lock.json  sw.js
.github/workflows/: ci.yml
.sqlx/: query-0bc1ca2893ea51273f0f356f7d32ac4cd889552aa95027d59824e854a4c64534.json  query-175af4bf7c74e3e2d76813cff2d59ea0cc51cc52c2e232a7fe35e46208ec286f.json  query-357193bf352521326242ea26e6958b00be693adebdd8146b173096627e96d79e.json  query-5e4e1bd821bd0d429b61c822929226a3f537ab7b00ead8a91418b889a150a150.json  query-6178dde46da4642301bcfe3d22cade4f6e7cf55659aadc6c9c2fc9987578a292.json  query-7ca0cfa65dbb787aacf84eff6dd066e51a7300b66d3fa17cd13c3d4d9bd2de4e.json  query-7caa70eb6ce916c29ff8c41abe91321c408db16ee5050b26cae84f3e0ad3a5c8.json  query-891c4fc395d84459df32d0b2e6861dee5acfc724b244411055e8a2e7bde97830.json  query-92a5ed57d4df253212488c0cc347b7aa75a55547a96ede4682ae28c1aeea7294.json  query-a256355eb770a0f51af969577b537d69c2ae5366dff6f32bf752b273a222364c.json  query-b5a70ee2d83d11e7cbe96cda2e5f2bda8878243a4b173fb6823b472ee3d66c71.json  query-c90336058106a12410769361a8cd36d94b61ce33e98c6ed53c314b8ae690210f.json  query-ca6dce58280fcced752b04b24eb99e5773a695c16072b0e301ef85721f2e26d4.json  query-d94350cfce29934169889e0834fc4b5e7991e985aedf008828def586e5d451ab.json  query-e39c50e67b8668db4d16294789ebf4149c2a3f193c780fa93799c60a42130fbe.json
assets/: generated.css
crates/bible/: Cargo.toml
crates/bible/src/: reading_plan.rs  repository.rs  search.rs
crates/bot/: Cargo.toml
crates/bot/src/: main.rs  scheduler.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  main.rs
crates/payments/: Cargo.toml
crates/payments/src/: domain.rs  handlers.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  state.rs
crates/server/src/handlers/: bible.rs  churches.rs  feed.rs  mod.rs  songs.rs  users.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs
crates/shared/src/domain/: church.rs  membership.rs  mod.rs  post.rs  religion.rs  song.rs  user.rs  verse.rs
crates/songbook/: Cargo.toml
crates/songbook/src/: parser.rs  repository.rs  transpose.rs
crates/ui/: Cargo.toml
crates/ui/src/: browser_chrome.rs  lib.rs  styles.css  theme.rs
crates/ui/src/components/: button.rs  card.rs  drawer.rs  header.rs  icon.rs  input.rs  mod.rs  skeleton.rs  tabs.rs  toast.rs  toggle.rs
crates/ui/src/styles/: header.module.css  toggle.module.css
crates/web/: Cargo.toml  Trunk.toml  build.rs  index.html
crates/web/assets/: base.css  generated.css  styles.css
crates/web/assets/css/: base.css  variables.css
crates/web/assets/css/components/: bible.css  buttons.css  nav.css  thumb-index.css
crates/web/src/: api.rs  app.rs  bible.rs  haptic.rs  lib.rs  main.rs  state.rs
crates/web/src/components/: loading.rs  mod.rs  nav.rs  verse_card.rs
crates/web/src/pages/: bible.rs  churches.rs  daily.rs  feed.rs  home.rs  mod.rs  not_found.rs  onboarding.rs  profile.rs  search.rs  settings.rs  songs.rs
crates/web/src/styles/: books.module.css  chapters.module.css  colors.module.css  header.module.css  nav.module.css  reader.module.css  settings.module.css  songs.module.css  thumb.module.css  utils.module.css
k8s/: 01-configmap.yaml  02-secrets.yaml  deployment.yaml  ingress.yaml
k8s/base/: bot-deployment.yaml  configmap.yaml  gateway-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  payments-deployment.yaml  secret.yaml  server-deployment.yaml
k8s/deployments/: server.yaml  web.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
k8s/services/: web.yaml
src/: api.rs  app.rs  bible.rs  haptic.rs  lib.rs  main.rs  state.rs
src/components/: loading.rs  nav.rs  verse_card.rs
src/pages/: bible.rs  churches.rs  daily.rs  feed.rs  home.rs  mod.rs  not_found.rs  onboarding.rs  profile.rs  search.rs  settings.rs  songs.rs
src/styles/: colors.module.css  common.module.css  nav.module.css  profile.module.css  songs.module.css
