[workspace]
resolver = "3"
members = ["crates/web"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Revelation Team"]
license = "MIT"
repository = "https://github.com/Revelation-Path/revelation"

[workspace.dependencies]
# External crates
revelation-shared = { git = "https://github.com/Revelation-Path/revelation-shared.git" }
revelation-songbook = { git = "https://github.com/Revelation-Path/revelation-songbook.git" }
revelation-ui = { git = "https://github.com/Revelation-Path/revelation-ui.git" }

# Leptos
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CSS Modules
stylance = "0.5"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
