[package]
name = "revelation-app"
version = "0.1.1"
edition = "2024"
authors = ["Revelation Team"]
license = "MIT"
repository = "https://github.com/Revelation-Path/revelation-app"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "revelation-app"
path = "src/main.rs"

[dependencies]
revelation-bible = "0.1"
revelation-songbook = "0.1"
revelation-user = "0.1"
revelation-ui = { version = "0.1", features = ["leptos"] }

leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
gloo-storage = "0.3"
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "console", "Navigator"] }
console_error_panic_hook = "0.1"
stylance = "0.7"

[features]
default = ["csr"]
csr = ["leptos/csr"]

[lints.rust]
unsafe_code = "deny"
dead_code = { level = "allow", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# WASM is single-threaded, Send not required
future_not_send = "allow"
# Leptos components used by view! macro, not called directly
must_use_candidate = "allow"
