[package]
name = "bible"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bible-cli"
path = "src/bin/cli.rs"

[dependencies]
shared = { path = "../shared", features = ["db", "backend"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
masterror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
clap = { version = "4", features = ["derive"] }
