[package]
name = "bot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "revelation-bot"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared", features = ["db", "backend"] }
bible = { path = "../bible" }

teloxide = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
masterror = { workspace = true }
