[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "revelation-gateway"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared", features = ["backend"] }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
masterror = { workspace = true }
