[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
masterror = { workspace = true, optional = true }
validator = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
db = ["sqlx"]
backend = ["masterror"]
