[package]
name = "ui"
version.workspace = true
edition.workspace = true

[package.metadata.stylance]
# CSS modules output handled by web crate's trunk build

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
stylance = { workspace = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlElement",
    "Element",
    "DomTokenList",
    "Window",
    "Document",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "AnimationEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "FocusEvent",
    "CssStyleDeclaration",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
