[package]
name = "web"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "revelation-web"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
songbook = { path = "../songbook" }
ui = { path = "../ui" }

leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["js"] }
chrono = { workspace = true }
gloo-storage = "0.3"
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "console"] }
console_error_panic_hook = "0.1"
stylance = "0.7"

[features]
hydrate = ["leptos/hydrate"]
csr = ["leptos/csr"]
